Re-add tests for http utils and fix enum string validation for good